# BetterSongSearchQuest

./: .clang-format  .gitignore  Android.mk  BetterSongSearchQuest.qmod  CMakeLists.txt  FUNDING.yml  LICENSE  README.md  addr2line.ps1  assets_include.cmake  build.ps1  buildQMOD.ps1  copy.ps1  copy.sh  createqmod.ps1  extern.cmake  log.ps1  mod.json  mod.template.json  ndk-stack.ps1  package-lock.json  package.json  pushui.ps1  qpm.json  qpm.shared.json  qpm_defines.cmake  release.ps1  releasedelete.ps1  restart-game.ps1  start-logging.ps1  tomb.ps1  versions.ps1  watch-templates.js
.devcontainer/: devcontainer.json  postCreate.sh
.github/actions/canary-ndk/: action.yml
.github/workflows/: main.yml  publish.yml  tag-and-push.yml
assets/: DownloadHistory.bsml  DownloadHistoryCell.bsml  DownloadListCell.bsml  FilterView.bsml  GenrePicker.bsml  GenrePickerCell.bsml  MultiDl.bsml  Presets.bsml  PresetsListCell.bsml  Settings.bsml  SongList.bsml  SongListCell.bsml  UploadDetails.bsml
include/: BeatSaverRegionManager.hpp  DataHolder.hpp  DateUtils.hpp  FilterOptions.hpp  FormatUtils.hpp  Formatters.hpp  IHook.hpp  PluginConfig.hpp  _config.h  assets.hpp  internal_macros.hpp  logging.hpp  main.hpp  uri.hh
include/Hooks/: DismissFlowCoordinatorHook.hpp
include/UI/: Manager.hpp  SelectedSongController.hpp  SliderFormatter.hpp  Sprites.hpp
include/UI/FlowCoordinators/: BetterSongSearchFlowCoordinator.hpp
include/UI/Modals/: GenrePicker.hpp  GenrePickerCell.hpp  MultiDL.hpp  Presets.hpp  PresetsTable.hpp  Settings.hpp  UploadDetails.hpp
include/UI/ViewControllers/: DownloadHistory.hpp  DownloadHistoryCell.hpp  DownloadListTableData.hpp  FilterView.hpp  SongList.hpp  SongListCell.hpp  SongListCellTableData.hpp
include/Util/: BSMLStuff.hpp  CurrentTimeMs.hpp  Debug.hpp  Random.hpp  RatelimitCoroutine.hpp  ResettableStaticPtr.hpp  SongUtil.hpp  TextUtil.hpp
include/overrides/: CustomSegmentedControl.hpp  CustomTextSegmentedControlData.hpp
shared/: CustomComponents.hpp
src/: DataHolder.cpp  FilterOptions.cpp  Formatters.cpp  PluginConfig.cpp  main.cpp
src/Hooks/: DismissFlowCoordinatorHook.cpp
src/UI/: Manager.cpp  SelectedSongController.cpp  SliderFormatter.cpp
src/UI/FlowCoordinators/: BetterSongSearchFlowCoordinator.cpp
src/UI/Modals/: GenrePicker.cpp  GenrePickerCell.cpp  MultiDL.cpp  Presets.cpp  PresetsTable.cpp  Settings.cpp  UploadDetails.cpp
src/UI/ViewControllers/: DownloadHistory.cpp  DownloadHistoryCell.cpp  FilterView.cpp  SongList.cpp  SongListCell.cpp
src/Util/: BSMLStuff.cpp  CurrentTimeMs.cpp  Debug.cpp  Random.cpp  SongUtil.cpp  TextUtil.cpp
src/overrides/: CustomSegmentedControl.cpp  CustomTextSegmentedControlData.cpp
